// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfilePage /> Renders correctly in various states app loading 1`] = `
<div>
  <div
    class="profile-page"
  >
    <div
      class="profile-page-bg-banner bg-primary d-md-block p-relative"
    />
    <div>
      <div
        class="d-flex justify-content-center align-items-center flex-column"
        style="height: 50vh;"
      >
        <div
          class="spinner-border text-primary"
          role="status"
        >
          <span
            class="sr-only"
          >
            Profile loading...
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProfilePage /> Renders correctly in various states successfully redirected to not found page. 1`] = `
<div>
  <div
    class="profile-page"
  >
    <div
      class="profile-page-bg-banner bg-primary d-md-block p-relative"
    />
    <div
      class="container-fluid"
    >
      <div
        class="row align-items-center pt-4 mb-4 pt-md-0 mb-md-0"
      >
        <div
          class="col-auto col-md-4 col-lg-3"
        >
          <div
            class="d-flex align-items-center d-md-block"
          >
            <div
              class="profile-avatar-wrap position-relative"
            >
              <div
                class="profile-avatar rounded-circle bg-light"
              >
                <div
                  aria-hidden="true"
                  class="text-muted"
                  data-testid="IconMock"
                  focusable="false"
                  role="img"
                  viewbox="0 0 24 24"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="d-md-none"
          >
            <span
              data-hj-suppress="true"
            >
              <h1
                class="h2 mb-0 font-weight-bold text-truncate"
              >
                staff
              </h1>
              <div
                class="d-flex align-items-center mt-3 mb-2rem"
              >
                <span
                  class="pgn__icon icon-visibility-off"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 6.5c2.76 0 5 2.24 5 5 0 .51-.1 1-.24 1.46l3.06 3.06c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l2.17 2.17c.47-.14.96-.24 1.47-.24ZM3.42 2.45 2.01 3.87l2.68 2.68A11.738 11.738 0 0 0 1 11.5C2.73 15.89 7 19 12 19c1.52 0 2.97-.3 4.31-.82l3.43 3.43 1.41-1.41L3.42 2.45ZM12 16.5c-2.76 0-5-2.24-5-5 0-.77.18-1.5.49-2.14l1.57 1.57c-.03.18-.06.37-.06.57 0 1.66 1.34 3 3 3 .2 0 .38-.03.57-.07L14.14 16c-.65.32-1.37.5-2.14.5Zm2.97-5.33a2.97 2.97 0 0 0-2.64-2.64l2.64 2.64Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="username-description"
                >
                  Your profile information is only visible to you. Only your username is visible to others on localhost.
                </div>
              </div>
              <hr
                class="d-none d-md-block"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4 col-lg-4"
        >
          <div
            class="d-none d-md-block mb-4"
          >
            <span
              data-hj-suppress="true"
            >
              <h1
                class="h2 mb-0 font-weight-bold text-truncate"
              >
                staff
              </h1>
              <div
                class="d-flex align-items-center mt-3 mb-2rem"
              >
                <span
                  class="pgn__icon icon-visibility-off"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 6.5c2.76 0 5 2.24 5 5 0 .51-.1 1-.24 1.46l3.06 3.06c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l2.17 2.17c.47-.14.96-.24 1.47-.24ZM3.42 2.45 2.01 3.87l2.68 2.68A11.738 11.738 0 0 0 1 11.5C2.73 15.89 7 19 12 19c1.52 0 2.97-.3 4.31-.82l3.43 3.43 1.41-1.41L3.42 2.45ZM12 16.5c-2.76 0-5-2.24-5-5 0-.77.18-1.5.49-2.14l1.57 1.57c-.03.18-.06.37-.06.57 0 1.66 1.34 3 3 3 .2 0 .38-.03.57-.07L14.14 16c-.65.32-1.37.5-2.14.5Zm2.97-5.33a2.97 2.97 0 0 0-2.64-2.64l2.64 2.64Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="username-description"
                >
                  Your profile information is only visible to you. Only your username is visible to others on localhost.
                </div>
              </div>
              <hr
                class="d-none d-md-block"
              />
            </span>
          </div>
          <div
            class="mb-4"
          />
        </div>
        <div
          class="pt-md-3 col-md-8 col-lg-7 offset-lg-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProfilePage /> Renders correctly in various states viewing other profile with all fields 1`] = `
<div>
  <div
    class="profile-page"
  >
    <div
      class="profile-page-bg-banner bg-primary d-md-block p-relative"
    />
    <div
      class="container-fluid"
    >
      <div
        class="row align-items-center pt-4 mb-4 pt-md-0 mb-md-0"
      >
        <div
          class="col-auto col-md-4 col-lg-3"
        >
          <div
            class="d-flex align-items-center d-md-block"
          >
            <div
              class="profile-avatar-wrap position-relative"
            >
              <div
                class="profile-avatar rounded-circle bg-light"
              >
                <div
                  aria-hidden="true"
                  class="text-muted"
                  data-testid="IconMock"
                  focusable="false"
                  role="img"
                  viewbox="0 0 24 24"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="d-md-none"
          >
            <span
              data-hj-suppress="true"
            >
              <h1
                class="h2 mb-0 font-weight-bold text-truncate"
              >
                verified
              </h1>
              <p
                class="mb-0"
              >
                Member since 
                2017
              </p>
              <div
                class="d-flex align-items-center mt-3 mb-2rem"
              >
                <span
                  class="pgn__icon icon-visibility-off"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 6.5c2.76 0 5 2.24 5 5 0 .51-.1 1-.24 1.46l3.06 3.06c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l2.17 2.17c.47-.14.96-.24 1.47-.24ZM3.42 2.45 2.01 3.87l2.68 2.68A11.738 11.738 0 0 0 1 11.5C2.73 15.89 7 19 12 19c1.52 0 2.97-.3 4.31-.82l3.43 3.43 1.41-1.41L3.42 2.45ZM12 16.5c-2.76 0-5-2.24-5-5 0-.77.18-1.5.49-2.14l1.57 1.57c-.03.18-.06.37-.06.57 0 1.66 1.34 3 3 3 .2 0 .38-.03.57-.07L14.14 16c-.65.32-1.37.5-2.14.5Zm2.97-5.33a2.97 2.97 0 0 0-2.64-2.64l2.64 2.64Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="username-description"
                >
                  Your profile information is only visible to you. Only your username is visible to others on localhost.
                </div>
              </div>
              <hr
                class="d-none d-md-block"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4 col-lg-4"
        >
          <div
            class="d-none d-md-block mb-4"
          >
            <span
              data-hj-suppress="true"
            >
              <h1
                class="h2 mb-0 font-weight-bold text-truncate"
              >
                verified
              </h1>
              <p
                class="mb-0"
              >
                Member since 
                2017
              </p>
              <div
                class="d-flex align-items-center mt-3 mb-2rem"
              >
                <span
                  class="pgn__icon icon-visibility-off"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 6.5c2.76 0 5 2.24 5 5 0 .51-.1 1-.24 1.46l3.06 3.06c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l2.17 2.17c.47-.14.96-.24 1.47-.24ZM3.42 2.45 2.01 3.87l2.68 2.68A11.738 11.738 0 0 0 1 11.5C2.73 15.89 7 19 12 19c1.52 0 2.97-.3 4.31-.82l3.43 3.43 1.41-1.41L3.42 2.45ZM12 16.5c-2.76 0-5-2.24-5-5 0-.77.18-1.5.49-2.14l1.57 1.57c-.03.18-.06.37-.06.57 0 1.66 1.34 3 3 3 .2 0 .38-.03.57-.07L14.14 16c-.65.32-1.37.5-2.14.5Zm2.97-5.33a2.97 2.97 0 0 0-2.64-2.64l2.64 2.64Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="username-description"
                >
                  Your profile information is only visible to you. Only your username is visible to others on localhost.
                </div>
              </div>
              <hr
                class="d-none d-md-block"
              />
            </span>
          </div>
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  Full Name
                </h2>
              </div>
              <p
                class="h5"
                data-hj-suppress="true"
              >
                user
              </p>
            </div>
          </div>
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  Location
                </h2>
              </div>
              <p
                class="h5"
                data-hj-suppress="true"
              />
            </div>
          </div>
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  Primary Language Spoken
                </h2>
              </div>
              <p
                class="h5"
                data-hj-suppress="true"
              />
            </div>
          </div>
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  Education
                </h2>
              </div>
              <p
                class="h5"
                data-hj-suppress="true"
              >
                Other education
              </p>
            </div>
          </div>
          <div
            class="mb-4"
          />
        </div>
        <div
          class="pt-md-3 col-md-8 col-lg-7 offset-lg-1"
        >
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  About Me
                </h2>
              </div>
              <p
                class="lead"
                data-hj-suppress="true"
              >
                bio
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProfilePage /> Renders correctly in various states viewing own profile 1`] = `
<div>
  <div
    class="profile-page"
  >
    <div
      class="profile-page-bg-banner bg-primary d-md-block p-relative"
    />
    <div
      class="container-fluid"
    >
      <div
        class="row align-items-center pt-4 mb-4 pt-md-0 mb-md-0"
      >
        <div
          class="col-auto col-md-4 col-lg-3"
        >
          <div
            class="d-flex align-items-center d-md-block"
          >
            <div
              class="profile-avatar-wrap position-relative"
            >
              <div
                class="profile-avatar rounded-circle bg-light"
              >
                <img
                  alt="profile avatar"
                  class="w-100 h-100 d-block rounded-circle overflow-hidden"
                  data-hj-suppress="true"
                  src="http://localhost:18000/media/profile-images/d2a9bdc2ba165dcefc73265c54bf9a20_500.jpg?v=1552495012"
                  style="object-fit: cover;"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="d-md-none"
          >
            <span
              data-hj-suppress="true"
            >
              <h1
                class="h2 mb-0 font-weight-bold text-truncate"
              >
                staff
              </h1>
              <p
                class="mb-0"
              >
                Member since 
                2017
              </p>
              <hr
                class="d-none d-md-block"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4 col-lg-4"
        >
          <div
            class="d-none d-md-block mb-4"
          >
            <span
              data-hj-suppress="true"
            >
              <h1
                class="h2 mb-0 font-weight-bold text-truncate"
              >
                staff
              </h1>
              <p
                class="mb-0"
              >
                Member since 
                2017
              </p>
              <hr
                class="d-none d-md-block"
              />
            </span>
          </div>
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  Full Name
                </h2>
              </div>
              <p
                class="h5"
                data-hj-suppress="true"
              >
                Lemon Seltzer
              </p>
            </div>
          </div>
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  Location
                </h2>
              </div>
              <p
                class="h5"
                data-hj-suppress="true"
              >
                <a
                  href="http://localhost:18000/gamma_dashboard/leaderboard/country/ME"
                  title="View the Montenegro leaderboard"
                >
                  Montenegro
                </a>
              </p>
            </div>
          </div>
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  Primary Language Spoken
                </h2>
              </div>
              <p
                class="h5"
                data-hj-suppress="true"
              >
                Yoruba
              </p>
            </div>
          </div>
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  Education
                </h2>
              </div>
              <p
                class="h5"
                data-hj-suppress="true"
              >
                Elementary/primary school
              </p>
            </div>
          </div>
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  Social Links
                </h2>
              </div>
              <ul
                class="list-unstyled social-links-static"
              >
                <li
                  class="mb-2"
                >
                  <a
                    class="font-weight-bold text-break"
                    href="https://www.twitter.com/ALOHA"
                    rel="nofollow noopener noreferrer ugc"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-x-twitter mr-2"
                      data-icon="x-twitter"
                      data-prefix="fab"
                      focusable="false"
                      role="img"
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
                        fill="currentColor"
                      />
                    </svg>
                    https://www.twitter.com/ALOHA
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="mb-4"
          />
        </div>
        <div
          class="pt-md-3 col-md-8 col-lg-7 offset-lg-1"
        >
          <div
            class="pgn-transition-replace-group position-relative mb-5"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  About Me
                </h2>
              </div>
              <p
                class="lead"
                data-hj-suppress="true"
              >
                This is my bio
              </p>
            </div>
          </div>
          <div
            class="pgn-transition-replace-group position-relative mb-4"
          >
            <div
              style="padding: .1px 0px;"
            >
              <div
                class="editable-item-header mb-2"
              >
                <h2
                  class="edit-section-header"
                >
                  My Certificates
                </h2>
              </div>
              <div
                class="row align-items-stretch"
              >
                <div
                  class="col-12 col-sm-6 d-flex align-items-stretch"
                >
                  <div
                    class="card mb-4 certificate flex-grow-1"
                  >
                    <div
                      class="certificate-type-illustration"
                      style="background-image: url(icon/mock/path);"
                    />
                    <div
                      class="card-body d-flex flex-column"
                    >
                      <div
                        class="card-title"
                      >
                        <p
                          class="small mb-0"
                        >
                          Verified Certificate
                        </p>
                        <h4
                          class="certificate-title"
                        >
                          edX Demonstration Course
                        </h4>
                      </div>
                      <p
                        class="small mb-0"
                      >
                        From
                      </p>
                      <p
                        class="h6 mb-4"
                      >
                        edX
                      </p>
                      <div
                        class="flex-grow-1"
                      />
                      <p
                        class="small mb-2"
                      >
                        Completed on 
                        3/4/2019
                      </p>
                      <div>
                        <a
                          class="pgn__hyperlink default-link standalone-link btn btn-outline-primary"
                          href="http://www.example.com/"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          View Certificate
                          <span
                            class="pgn__hyperlink__external-icon"
                            title="Opens in a new tab"
                          >
                            <span
                              class="pgn__icon"
                              data-testid="hyperlink-icon"
                              style="height: 1em; width: 1em;"
                            >
                              <svg
                                aria-hidden="true"
                                fill="none"
                                focusable="false"
                                height="24"
                                role="img"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M19 19H5V5h7V3H3v18h18v-9h-2v7ZM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Z"
                                  fill="currentColor"
                                />
                              </svg>
                              <span
                                class="sr-only"
                              >
                                in a new tab
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
